--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,46 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Find your favorite snow gear!</h1>
+  <p class="lead">Copy Text</p>
+</div> 
+
+<div class="container mx-auto text-center">
+    <form class="needs-validation" novalidate="">
+        <div class="row">
+          <div class="col-md mb-3">
+            <label for="location">Location</label>
+            <input type="search" class="form-control" id="location" placeholder="" value="" required="">
+            <div class="invalid-feedback">
+              Valid Location is required.
+            </div>
           </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+          <div class="col-md mb-3">
+            <label for="startDate">Start</label>
+            <input type="date" class="form-control date" id="startDate" placeholder="" value="" required="">
+            <div class="invalid-feedback">
+              Valid start date is required.
+            </div>
           </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
-    </div>
-  </div>
+          <div class="col-md mb-3">
+            <label for="endDate">End</label>
+            <input type="date" class="form-control date" id="endDate" placeholder="" value="" required="">
+            <div class="invalid-feedback">
+              Valid end date is required.
+            </div>
+          </div>
+          <button class="btn btn-primary btn-lg btn-block" type="submit">Search for gear!</button>
+        </div>
+      </form>
+
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/places.js@1.18.1"></script>
+
+<script>
+  var placesAutocomplete = places({
+    appId: 'plRBCXVUPR5A',
+    apiKey: 'db98c654e58bf17cea0e8dec0146590b',
+    container: document.querySelector('#location')
+  });
+</script>
