--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/styles/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+  <title></title>
 </head>
 
 <body>
+
+  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h5 class="my-0 mr-md-auto font-weight-normal">sharemyski</h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+      <a class="p-2 text-dark" href="#">How We Work</a>
+      <a class="p-2 text-dark" href="#">Sign In</a>
+      <a class="p-2 text-dark" href="#">Sign Up</a>
+    </nav>
+    <a class="btn btn-outline-primary mr-1" href="#">Sign Up</a>
+    <a class="btn btn-outline-primary mr-1" href="#">Sign In</a>
+    <a class="btn btn-outline-primary" href="#">List</a>
+  </div>
   {{{body}}}
 </body>
+
+<script src="/js/jquery-3.4.1.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 
 </html>
