--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -6,24 +6,7 @@
 </div>
 
 <div id="container">
-  <h2>Available Rentals</h2>
-  <div class="table-responsive">
-    <table class="table table-striped table-sm" id="stuff">
-
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-        </tr>
-      </thead>
-      <tbody>
-
-      </tbody>
-    </table>
-  </div>
+ 
 </div>
 
 <!-- Make sure you put this AFTER Leaflet's CSS -->
@@ -33,7 +16,9 @@
 <script>
 
   $(document).ready(function () {
-    var map = L.map('map').setView([{{ lat }}, {{ lng }} ], 12);
+    let lat = {{lat}};
+    let lng = {{lng}};
+    var map = L.map('map').setView([lat, lng ], 11);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
@@ -45,17 +30,27 @@
   }).then(function (response) {
     response.forEach(e => {
       console.log(e);
-      let row = $("<tr>");
-      row.append($("<td>").text(e.id));
-      row.append($("<td>").text(e.cat_name));
-      row.append($("<td>").text(e.description));
-        row.append($("<td>").append($("<button>").text("Rent! ")));
-      $("#stuff > tbody").append(row);
+      //let row = $("<tr>");
+      //row.append($("<td>").text(e.id));
+      //row.append($("<td>").text(e.cat_name));
+      //row.append($("<td>").text(e.description));
+      //  row.append($("<td>").append($("<button>").text("Rent! ")));
+      //$("#stuff > tbody").append(row);
 
-      L.marker([e.Location.lat, e.Location.long]).addTo(map)
-        .bindPopup(`<a href="/stuff/${e.id}">${e.description}</a>`)
-        .openPopup();
+      L.marker([e.Location.lat, e.Location.long]).addTo(map).bindPopup(`<a class="popup" data-id="${e.id}" href="/stuff/${e.id}">${e.description}</a>`);
     });
+  });
+  });
+
+$(document).on("click", ".popup", function(e){
+  e.preventDefault();
+  let id = $(this).data("id");
+  $.ajax({
+      url: `/api/stuff/${id}`,
+      method: "GET"
+    }).then(function (response) {
+        console.log(response);
+        $("#container").append(response.cat_name);
   });
   });
 </script>
