--- a/views/stuff.handlebars
+++ b/views/stuff.handlebars
@@ -1,5 +1,7 @@
+{{#if all}}
+
 <div id="container">
-    <h2>Available Rentals</h2>
+    <h2>All Available Rentals</h2>
     <div class="table-responsive">
         <table class="table table-striped table-sm" id="stuff">
             <thead>
@@ -11,37 +13,73 @@
                     <th>Header</th>
                 </tr>
             </thead>
-            <tbody id="stuff2">
+            <tbody>
 
             </tbody>
         </table>
     </div>
 </div>
-
-<div id="container">
-    <h2>Add Rentals</h2>
-    <form action="/api/stuff" method="POST">
-        <input type="text">
-        <input type="text">
-        <button type="submit">Submit</button>
-    </form>
-    </div>
-
 <script>
+
+  $(document).ready(function () {
+    
+  $.ajax({
+    url: "/api/stuff/",
+    method: "GET"
+  }).then(function (response) {
+    response.forEach(e => {
+      console.log(e);
+      let row = $("<tr>");
+      row.append($("<td>").text(e.id));
+      row.append($("<td>").text(e.cat_name));
+      row.append($("<td>").text(e.description));
+        row.append($("<td>").append($("<button>").text("Rent! ")));
+      $("#stuff > tbody").append(row);
+
+    });
+  });
+  });
+</script>
+{{/if}}
+{{#unless all}}
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin="" />
+
+<div id="stuff-view">
+
+</div>
+<div id="container">
+    <div id="map" style="height: 200px; "></div>
+</div>
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
+<script>
+
     $(document).ready(function () {
-        $.ajax({
-            url: "/api/stuff",
-            method: "GET"
-        }).then(function (response) {
-            
-            response.forEach(e => {
-                console.log(e);
-                let row = $("<tr>");
-                row.append($("<td>").text(e.id));
-                row.append($("<td>").text(e.name));
-                row.append($("<td>").text(e.description));
-                $("#stuff > tbody").append(row);
-            });
-        });
+        let id = {{ id }};
+
+
+    $.ajax({
+        url: "/api/stuff/" + id,
+        method: "GET"
+    }).then(function (response) {
+        console.log(response);
+
+      
+        var map = L.map('map').setView([resoponse.lat, response.long ], 12);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+        L.marker([resoponse.lat, resoponse.long]).addTo(map)
+            .bindPopup(`${response.description}`)
+            .openPopup();
+    });
     });
 </script>
+{{/unless}}
