--- a/views/stuff.handlebars
+++ b/views/stuff.handlebars
@@ -70,13 +70,13 @@
         console.log(response);
 
       
-        var map = L.map('map').setView([resoponse.lat, response.long ], 12);
+        var map = L.map('map').setView([resoponse.lat, response.lng ], 12);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-        L.marker([resoponse.lat, resoponse.long]).addTo(map)
+        L.marker([resoponse.lat, resoponse.lng]).addTo(map)
             .bindPopup(`${response.description}`)
             .openPopup();
     });
