--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -10,6 +10,10 @@
   .my-div-icon {
     font-size: 50px;
   }
+  .flexbox img {
+  width: 100%;
+  height: auto;
+}
 </style>
 <div class="row d-flex justify-content-center">
       <div class="col-md-10 " id="stuffContainer">
