--- a/views/auth/signup.handlebars
+++ b/views/auth/signup.handlebars
@@ -1,7 +1,5 @@
 
   <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=767050943828344&autoLogAppEvents=1"></script>
-
   <div class="row d-flex justify-content-center">
       <div class="col-md-6 ">
         <h2>Sign Up for sharemyski</h2>
@@ -16,8 +14,7 @@
           </div>
           <button type="submit" class="btn btn-dark mr-2">Sign Up</button>
           <span>or</span>
-          <div class="fb-login-button btn" data-width="50" data-size="large" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="true"></div>
-          <a href="/auth/facebook">FB Auth</a>
+          <a class="btn ml-2" style="color: white; background-color: #4267B2;" href="/auth/facebook">Sign up with Facebook</a>
           </form>
         <br />
         <p>Or login <a href="/login">here</a></p>
