updated about page

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,9 +4,18 @@
         <h3>sharemyski helps people find ski rentals all over the world</h3>
         <div class="row">
             <p class="text-left">
-                sharemyski is the best place to rent skis or a snowboard. peroiod. Through our service, owners list their snow equipment,
+                Sharemyski is the best place to rent skis or a snowboard. peroiod. Through our service, owners list their snow equipment,
                 renters search for gear in whatever area they wish to, and they can complete the rental process easily through our
                 website.</p>
+                <h3>Mission Statement:</h3>
+            <p class = "text-left">
+                Here at Sharemyski, our goal is to live in a world where one day you can experience the joys
+                of fresh air, fresh powder, and fresh gear. The barriers to entry in skiing and snowboarding
+                come in the form of high up front costs from equipment and gear that may be anywhere from hundreds
+                to thousands of dollars. With our app, we decrease that barrier to entry significantly giving
+                you access to that same equipment rented from fellow app users. So whether you want to rent your
+                own snow gear, or need some gear yourself, our app can help!
+            </p>
         </div>
 
     </div>
